Changes Figures folder

--- a/Sections/00_Title.tex
+++ b/Sections/00_Title.tex
@@ -1,9 +1,9 @@
 \begin{titlepage}
-\includegraphics[scale=0.2]{Images/SOLEILLogo.png}
+\includegraphics[scale=0.2]{logo/SOLEIL.png}
 \hspace{2.7cm}
-\includegraphics[scale=0.0472]{Images/LogoCEA.png}
+\includegraphics[scale=0.0472]{logo/CEA.png}
 \hspace{2.7cm}
-\includegraphics[scale=0.2]{Images/LogoParisSaclay.jpg}
+\includegraphics[scale=0.2]{logo/ParisSaclayPrune.jpg}
 
 \vspace{1.1cm}
     \begin{center}
