--- a/Sections/2_Theory_Models/0_Catalysis.tex
+++ b/Sections/2_Theory_Models/0_Catalysis.tex
@@ -50,7 +50,7 @@ Finally, adsorbed oxygen did not block the ammonia adsorption [12]. All these fa
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=\textwidth]{Images/ReactionScheme.png}
+    \includegraphics[width=\textwidth]{ammonia/ReactionScheme.png}
     \caption{\cite{Rebrov2002}}
     \label{fig:my_label}
 \end{figure}
