--- a/Sections/2_Theory_Models/3_BCDI.tex
+++ b/Sections/2_Theory_Models/3_BCDI.tex
@@ -107,7 +107,7 @@ numx = xrange * 2
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=\textwidth]{Images/phase_unwrapping.png}
+    \includegraphics[width=\textwidth]{bcdi_data/phase_unwrapping.png}
     \caption{Phase unwrapping with skimage package.}
     \label{fig:phase_unwrap_skimage}
 \end{figure}
@@ -180,7 +180,7 @@ Example of gradient computation in python, using the nearest neighbours, see exa
 
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{Images/phase_grad.png}
+    \includegraphics[width=\textwidth]{bcdi_data/phase_grad.png}
     \caption{Phase gradients}
     \label{fig:phase_grad}
 \end{figure}
