--- a/Sections/99_4eme_couverture.tex
+++ b/Sections/99_4eme_couverture.tex
@@ -14,7 +14,7 @@
 %*****************************************************
 %***** LOGO DE L'ED À CHANGER IMPÉRATIVEMENT *********
 %*****************************************************
-\includegraphics[height=2.4cm]{Images/logo_edpif_4eme.png}
+\includegraphics[height=2.4cm]{logo/logo_edpif_4eme.png}
 \vspace{0.5cm}
 %*****************************************************
 \fontfamily{cmss}\fontseries{m}\selectfont
