--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -2,7 +2,7 @@
 
 \newgeometry{left=6cm,bottom=1cm, top=1cm, right=1cm}
 
-\tikz[remember picture,overlay] \node[opacity=1,inner sep=0pt] at (-13mm,-135mm){\includegraphics{Bandeau_UPaS.pdf}};
+\tikz[remember picture,overlay] \node[opacity=1,inner sep=0pt] at (-13mm,-135mm){\includegraphics{logo/Bandeau_UPaS.pdf}};
 
 % fonte sans empattement pour la page de titre
 \fontfamily{fvs}\fontseries{m}\selectfont
@@ -20,8 +20,8 @@
 \end{picture}
 
 \vspace{-12mm}
-\flushright \includegraphics[height=2.1cm]{Images/LogoCEA.png} \hspace{7mm}
-\includegraphics[height=2.1cm]{Images/SOLEILLogo.png}
+\flushright \includegraphics[height=2.1cm]{logo/CEA.png} \hspace{7mm}
+\includegraphics[height=2.1cm]{logo/SOLEIL.png}
 
 %*****************************************************
 %******************** TITRE **************************
