--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -2,11 +2,13 @@
 
 \section{The oxidation of Ammonia}
 
-Ammonia oxidation is an essential catalytic reaction used in the production of artificial fertilizers and in environmental applications. In both cases, particular focus is on two products of the reaction, namely, NO and N2. The selectivity toward either one is dictated by reaction parameters, that is, by temperature, $O_2/NH_3$ partial pressures, and the type of catalyst.
+Ammonia oxidation is an essential catalytic reaction used in the production of artificial fertilizers and in environmental applications. In both cases, particular focus is on two products of the reaction, namely, \nitricoxide and \nitrogen. The selectivity toward either one is dictated by reaction parameters, that is, by temperature, \ammonia and \dioxygen partial pressures, and the type of catalyst.
 
 Detail and literature about the oxidation of Ammonia on Platinum nano-catalyst can be found here \parencite{Resta2020a}.
 
 \subsection{From industry to model catalysis}
+
+\subsection{Crystal structures}
 
 \subsection{Pt 111}
 \subsection{Pt 100}
