--- a/references.bib
+++ b/references.bib
@@ -394,6 +394,26 @@ title = {{Ammonia selective oxidation on Pt(100) sites in an alkaline medium}},
 volume = {109},
 year = {2003}
 }
+
+@online{NIST_cross_sections,
+  author = {Berger, M.J. and Hubbell, J.H. and Seltzer, S.M. and Chang, J. and Coursey, J.S. and Sukumar, R. and Zucker, D.S. and Olsen, K.},
+  title = {NIST Standard Reference Database 8 (XGAM)},
+  year = 2010,
+  url = {https://www.nist.gov/pml/xcom-photon-cross-sections-database},
+  urldate = {2023-06-15},
+  doi = {https://dx.doi.org/10.18434/T48G6X}
+}
+
+
+@online{NIST_form_factors,
+  author = {Chantler, C.T. and Olsen, K. and Dragoset,  R.A. and Chang, J. and Kishore, A.R. and Kotochigova, S.A. and Zucker, D.S.},
+  title = {NIST Standard Reference Database 66},
+  year = 2005,
+  url = {https://www.nist.gov/pml/x-ray-form-factor-attenuation-and-scattering-tables},
+  urldate = {2023-06-15},
+  doi = {https://dx.doi.org/10.18434/T4HS32}
+}
+
 @article{Vilekar2012,
 abstract = {The mechanism and kinetics of NH 3 decomposition reaction mechanism has been a subject of interest for decades, although it is attracting renewed interest in connection with hydrogen generation for fuel cells. This system represents an example of a most peculiar nonlinear catalytic reaction sequence for which, even though the mechanistic steps are well-accepted and their DFT energetics widely studied, the microkinetics have not yet been fully investigated. In fact, there is no agreement even as to which step(s) are rate-limiting. Employing our Reaction Route (RR) Graph approach and the corresponding electrical analogy, we investigate in detail the steady-state microkinetics of the seven-step NH 3 decomposition reaction mechanism. Based on an Ohm's law representation of kinetics, we develop an accurate quasi steady-state (QSS) rate expression for the complete sequence, not possible with the usual QSS approach, which provides only numerical results for the nonlinear sequence. Further, it allows the rate-limiting step(s) to be identified in a rigorous manner, based simply on a comparison of the step resistances. Combining this with identification of the most abundant reactive intermediate (MARI), the mechanism and the rate expressions are pruned to provide a simplified rate law that is found to be in complete agreement with numerical QSS analysis as well as with our experimental data on Fe without any fitted parameters. {\textcopyright} 2011 Elsevier Ltd.},
 author = {Vilekar, Saurabh A. and Fishtik, Ilie and Datta, Ravindra},
