--- a/main.tex
+++ b/main.tex
@@ -89,6 +89,9 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Citation %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\usepackage[utf8]{inputenc} % Use accents in source code, load before biblatex
+\usepackage[T1]{fontenc} % Show accents in output
+
 \usepackage[style=authoryear,sorting=none]{biblatex}
 %    nty Sort by name, title, year.
 %    nyt Sort by name, year, title.
@@ -101,10 +104,6 @@
 \addbibresource{/home/david/Documents/PhD/PhdThesis/references.bib}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Other packages %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\usepackage[utf8]{inputenc} % Use accents in source code
-\usepackage[T1]{fontenc} % Show accents in output
-
 \usepackage{lipsum} % Latin blabla
 \usepackage{lmodern} % to avoid errors in font size
 \usepackage[british]{babel}
@@ -136,6 +135,9 @@
 \usepackage{array} % Create tables as arrays
 \usepackage{csquotes}
 \usepackage{booktabs} % for \midrule and such
+
+\usepackage{amsmath} % for maths
+\usepackage{amssymb}
 
 \usepackage[
     colorlinks = true,
@@ -187,7 +189,7 @@
 \mainmatter
 % Introduction
     \chapter{Introduction} 
-    \input{Sections/1_Introduction/Introduction}
+    \input{Sections/1_Introduction/AmmoniaOxidation}
      
 % Theory
     \chapter{Theory and methods}
