--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -8,21 +8,47 @@ Detail and literature about the oxidation of Ammonia on Platinum nano-catalyst c
 
 \subsection{From industry to model catalysis}
 
+"A long standing conundrum in the catalysis community emerged at the interface between surface science and heterogeneous catalysis, better known as the pressure and materials gap."
+
+Nature Catalysis editorial, 2018.
+
+\begin{table}[!htb]
+    \centering
+    \begin{tabular}{l|l|l|l}
+    \toprule
+                & Pressure    & Material       &     Temperature \\
+    \midrule
+    Industry   & 1-12 bar & Wires ($\diameter \approx 80 \, \mu m$) & \textgreater 1000 K \\
+    \midrule
+    Literature & UHV, mbar & Single crystals & RT - 1000 K \\ \midrule
+    This study & Near ambient    & Single crystals  & $\approx$ 750 K \\
+               & pressure (0.5 bar)  & and nanoparticles & \\
+    \bottomrule
+    \end{tabular}
+    \caption{Material and pressure gap in heterogenous catalysis.}
+    \label{tab:gap}
+\end{table}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[height=3cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/pt_gazes.png}
+    \includegraphics[height=3cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/B7/B7_facets.png}
+    \includegraphics[height=3cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/sxrd_sample.png}
+    \caption{Platinum gazes used in industry (left), Pt particle measured at SixS, $\diameter$ is of about 300 nm (middle), Pt 111 single crystal used in SXRD and XPS experiments, $\diameter$ is of about 8 mm (right).}
+\end{figure}
+
 \subsection{Crystal structures}
 
 \subsection{Pt 111}
+
 \subsection{Pt 100}
+
 \subsection{Nanoparticles}
-\lipsum
 
 \section{Aim and Scope}
 
-
-\lipsum
-
-
 \section{Outline of the Thesis}
 
+In the first chapter of this thesis we will come back to the basics behind each X-ray technique that was used to study the catalyst, as well as define the exact meaning of heterogeneous catalysis and how
 
-\lipsum
-
+In the second chapter we will present and discuss the results that we obtained with three different techniques
