--- a/Sections/2_Theory_Models/Jupyter.tex
+++ b/Sections/2_Theory_Models/Jupyter.tex
@@ -1,6 +1,7 @@
-\section{Jupyter Notebook}
+\section{Transitioning to Big data at synchrotrons}
 interface
 
+\subsection{Jupyter notebook}
 \lipsum
 
 \section{Standards for data reproducibility}
