--- a/references.bib
+++ b/references.bib
@@ -2227,6 +2227,33 @@ title = {{Surface X-ray diffraction}},
 volume = {55},
 year = {1991}
 }
+
+@book{NielsenMcMorrow,
+title = {Elements of Modern X‐ray Physics},
+author = {Jens Als-Nielsen, Des McMorrow},
+year = {2011},
+publisher = {John Wiley and Sons, Ltd},
+doi = {10.1002/9781119998365},
+}
+
+@book{Willmott,
+title = {An Introduction to Synchrotron Radiation: Techniques and Applications},
+author = {Philip Willmott},
+year = {2019},
+publisher = {John Wiley and Sons, Ltd},
+doi = {10.1002/9781119280453},
+}
+
+@book{InterTablesOfCryst,
+	title = {International Tables for Crystallography},
+	author = {P. J. Brown and A. G. Fox and E. N. Maslen and M. A. O'Keefe and B. T. M. Willis},
+	year = {2006},
+	volume = {C},
+	chapter = {6.1},
+	pages = {554-595},
+	doi = {10.1107/97809553602060000600}
+}
+
 @article{LawrenceBright2021,
 abstract = { The high levels of flux available at a fourth-generation synchrotron are shown to have significant beam heating effects for high-energy X-rays and radiation hard samples, leading to temperature increases of over 400 K with a monochromatic beam. These effects have been investigated at the ID11 beamline at the recently upgraded ESRF Extremely Brilliant Source, using thermal lattice expansion to perform in situ measurements of beam heating. Results showed significant increases in temperature for metal and ceria samples, which are compared with a lumped thermodynamic model, providing a tool for estimating beam heating effects. These temperature increases may have a drastic effect on samples and measurements, such as the rapid recrystallization of a copper wire shown here. These results demonstrate the importance of beam heating and provide information needed to consider, predict and mitigate these effects. },
 author = {{Lawrence Bright}, Eleanor and Giacobbe, Carlotta and Wright, Jonathan P.},
