--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Preamble %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[12pt]{report}
+\documentclass[11pt]{report}
 
 \usepackage{titling} % makes following commands available
 \title{Catalytic properties at the nanoscale probed by surface X-ray diffraction and coherent diffraction imaging}
@@ -121,6 +121,8 @@
 
 \usepackage{siunitx} % Units
 \DeclareSIUnit\angstrom{\text {Å}}
+\DeclareSIUnit\barn{b}
+\usepackage{wasysym} % for diameter symbol
 
 \usepackage{graphicx} % Insert images
 \graphicspath{{/home/david/Documents/PhD/Figures/}}
@@ -175,8 +177,8 @@
 % Optional Chapters
     %\chapter*{Dedication}
     %\chapter*{Declaration}
-    \chapter*{Acknowledgements}
-    \input{Sections/0_Acknowledgements}
+    % \chapter*{Acknowledgements}
+    % \input{Sections/0_Acknowledgements}
 
 \frontmatter
 % Table of contents, list of figures, and list of tables
@@ -193,38 +195,34 @@
      
 % Theory
     \chapter{Theory and methods}
-    \input{Sections/2_Theory_Models/0_Catalysis}
-    \input{Sections/2_Theory_Models/1_X-ray_interaction_matter}
-    \input{Sections/2_Theory_Models/2_SXRD}
-    \input{Sections/2_Theory_Models/3_BCDI}
-    \input{Sections/2_Theory_Models/4_XPS}
-    \input{Sections/2_Theory_Models/5_SixS}
+    % \input{Sections/2_Theory_Models/Catalysis}
+    \input{Sections/2_Theory_Models/X-ray_interaction_matter}
+%     \input{Sections/2_Theory_Models/SXRD}
+%     \input{Sections/2_Theory_Models/BCDI}
+%     \input{Sections/2_Theory_Models/XPS}
+%     \input{Sections/2_Theory_Models/SixS}
+%     \input{Sections/2_Theory_Models/Jupyter}
     
-% Results
-    \chapter{Results}
-    \input{Sections/3_Results/Results}
+% % Results
+%     \chapter{Results}
+%     \input{Sections/3_Results/Results}
     
-    \section{Empirical Analysis}
-    \input{Sections/3_Results/EmpiricalAnalysis}
+%     \section{Empirical Analysis}
+%     \input{Sections/3_Results/EmpiricalAnalysis}
     
-% Big data
-    \chapter{Transitioning to big data at Synchrotrons}
-    \input{Sections/4_BigData/UserExperience}
-    \input{Sections/4_BigData/Algorithms}
+% % Conclusion
+%     \chapter{Conclusion}
+%     \input{Sections/4_Conclusion/Conclusion}
     
-% Conclusion
-    \chapter{Conclusion}
-    \input{Sections/5_Conclusion/Conclusion}
-    
-% Bibliography
+% % Bibliography
     \phantomsection
     \printbibliography
 
 % Appendices
-    \appendix
-    \chapter{(Appendix A)}
-    \input{Sections/6_Appendix/Papers}
-    \input{Sections/6_Appendix/PythonScripts}
+    % \appendix
+    % \chapter{(Appendix A)}
+    % \input{Sections/5_Appendix/Papers}
+    % \input{Sections/5_Appendix/PythonScripts}
 
 % 4ème de couverture
 \input{Sections/99_4eme_couverture}
